.config/waybar/pixelBar.css
#waybar.pixelbar {
  background: linear-gradient(
    to bottom,
    rgba(0, 0, 0, 0.4) 0%,
    rgba(0, 0, 0, 0.2) 30%,
    rgba(0, 0, 0, 0) 100%
  );
}

/* ============================ [ WORKSPACES ] ============================ */

/* #workspaces.pixel {
  margin-left: 20px;
} */

/* Inactive and Full */
#workspaces.pixel button {
  padding-top: 10px;
  padding-bottom: 10px;
  border-top: 3px;
  border-style: solid;
  margin-left: 5px;
  margin-right: 5px;
  padding-left: 25px;
  padding-right: 25px;
  border-color: rgba(205, 214, 244, 0.8);
  color: rgba(205, 214, 244, 0.8);
  transition: none;
}

/* Inactive and Empty */
#workspaces.pixel button.empty {
  border-color: rgba(108, 112, 134, 0.5);
  color: rgba(108, 112, 134, 0.5);
}

/* Active and Full */
#workspaces.pixel button.active {
  border-color: @primary;
  color: @primary;
}

/* Active but Empty */
#workspaces.pixel button.active.empty {
  border-color: #f38ba8;
  color: #f38ba8;
}

#workspaces.pixel button.focused {
  border-color: #fab387;
  color: #fab387;
}

@keyframes finished_task_blink {
  to {
    border-color: #000000;
    background: rgba(0, 0, 0, 0);
  }
}

/* Urgent */
#workspaces.pixel button.urgent {
  border-style: solid;
  border-color: #a6e3a1;
  color: #a6e3a1;
  animation-name: finished_task_blink;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  background: linear-gradient(
    to bottom,
    rgba(166, 227, 161, 0.3) 0%,
    rgba(166, 227, 161, 0) 100%
  );
}

#workspaces.pixel button:hover {
  background: linear-gradient(
    to bottom,
    rgba(50, 50, 50, 0.8) 0%,
    rgba(50, 50, 50, 0) 100%
  );
}

/* =========================== [ AUDIO VOLUME ] =========================== */

#pulseaudio-slider.pixel {
  min-height: 0px;
  min-width: 0px;
  padding-top: 0px;
  /* Using negative values bc this GTK slider trash always stays center */
  margin-top: -45px;
  margin-right: 20px;
}
#pulseaudio-slider.pixel slider {
  min-height: 0px;
  min-width: 0px;
  opacity: 0;
}
#pulseaudio-slider.pixel trough {
  min-height: 5px;
  min-width: 100px;
  border-radius: 5px;
  background-color: #5c5c70;
}
#pulseaudio-slider.pixel highlight {
  min-width: 10px;
  border-radius: 5px;
  background-color: #89b4fa;
}

